--- a/style.css
+++ b/style.css
@@ -1,4 +1,118 @@
-* {
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
     margin: 0;
-    padding: 0;
+  }
+  /*
+    Typographic tweaks!
+    3. Add accessible line-height
+    4. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    5. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    6. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    7. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    8. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+  .container{
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 3fr ;
+    background-color: #ffffff;
+  }
+
+  .sidebar{
+    background-color: #38bdf8;
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+    padding: 10px;
+  } 
+
+
+  .sidebar >div {
+    display: flex;
+    gap:13px;
+    align-items: center;
+     margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    color: #ffffff;
+  }
+
+  .sidebar >div > img{
+    width:2rem;
+  }
+
+  .sidebar>.dashboard{
+    margin-bottom: 2rem;
+  }
+
+  .sidebar>.communities{
+    margin-bottom: 2rem;
+  }
+
+  .header{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+    background-color: aquamarine;
+  }
+
+  .header>.labelDiv>label>img{
+    width:1.2rem;
+  }
+  .header>.name-img-Div>img{
+    width:1.2rem;
+  }
+  .header>.name-img-Div>.catAvatar{
+    width:3rem;
+    border-radius: 13em;
+  }
+  .header>.header3rdDiv>.catAvatar{
+    width:4rem;
+    border-radius: 13em;
+  }
+  .header>div{
+    display: flex;
+  }
+
+  .announcements{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+    background-color: bisque;
+  }
+
+  .trending{
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
+    background-color: chocolate;
   }
