--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    background-color: #e5e7eb;
   }
   /*
     5. Improve media defaults
@@ -45,7 +46,7 @@
   .container{
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 1fr 3fr ;
+    grid-template-rows: 150px 2fr ;
     background-color: #ffffff;
   }
 
@@ -81,11 +82,12 @@
   .header{
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 60px 60px;
     grid-column: 2 / 4;
     grid-row: 1 / 2;
     background-color: rgb(255, 255, 255);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.208);
+    padding: 3px;
   }
 
   .header>.labelDiv>label>img{
@@ -150,7 +152,8 @@
 
   .header3rdDiv > p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
+    font-weight: 700;
+    font-size: 1.1rem;
   }
 
   .buttonDiv{
@@ -158,23 +161,70 @@
     justify-self:center;
     align-self: center;
     gap:1.5rem;
+    padding-right:2.2rem;
   }
 
   button{
     text-align: center;
     text-decoration: none;
     border: none;
-    padding: 7px 16px;
+    padding: 7px 20px;
     border-radius: 15px;
     background-color: #38bdf8;
     color: #ffffff;
     font-weight: 520;
   }
 
+  .projects {
+    background-color: #e5e7eb;
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 30px repeat(3,1fr);
+    gap:10px;
+  }
+
+  .project-heading{
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    padding:10px;
+    justify-self: start;
+  }
+  .project-heading>h4{
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  .projects > .card {
+    background-color: #FFFFFF;
+    color: black;
+    text-align: center;
+    padding: 25px 20px;
+    border-radius: 15px;
+    margin:10px;
+    display: grid;
+    grid-template-rows: 1 / 4;
+  }
+
+  .projects > .card > .imgDiv{
+    display: flex;
+    gap: 20px;
+    justify-self: flex-end;
+    margin-top: 10px;
+    padding-right:10px;
+  }
+  .projects > .card > .imgDiv > img{
+    width: 20px;
+  }
+
   .announcements{
     grid-column: 3 / 4;
     grid-row: 2 / 3;
     background-color: bisque;
+    display: grid;
+    grid-row: 2 /3;
+  }
+
+  .announcements > .announcement-div{
+    
   }
 
   .trending{
