--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
     display:grid;
     grid-template-columns: repeat(2,1fr);
     grid-template-rows: 30px repeat(3,1fr);
-    gap:10px;
+    gap:5px;
   }
 
   .project-heading{
@@ -197,18 +197,28 @@
     background-color: #FFFFFF;
     color: black;
     text-align: center;
-    padding: 25px 20px;
+    padding: 15px 10px;
     border-radius: 15px;
     margin:10px;
     display: grid;
     grid-template-rows: 1 / 4;
   }
 
+  .projects > .card > h4{
+    font-size: 18px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .projects > .card > p {
+    font-size: 17px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
   .projects > .card > .imgDiv{
     display: flex;
     gap: 20px;
     justify-self: flex-end;
-    margin-top: 10px;
+    margin-top: 2px;
     padding-right:10px;
   }
   .projects > .card > .imgDiv > img{
@@ -218,17 +228,46 @@
   .announcements{
     grid-column: 3 / 4;
     grid-row: 2 / 3;
-    background-color: bisque;
+    background-color: #e5e7eb;
     display: grid;
-    grid-row: 2 /3;
+    grid-auto-flow: column;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 1fr 1fr 1fr 4fr;
   }
 
-  .announcements > .announcement-div{
-    
+  .announcements > .announcement-heading{
+    padding: 10px;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .announcements > .div1{
+    grid-row: 2 / 3;
+  }
+
+  .announcements > .announcement-div {
+    padding: 20px 22px;
+    background-color: #FFFFFF;
+    margin-left: 8px;
+    margin-right:15px;
+    border-radius: 4px;
+    border-bottom: 1.5px solid rgba(202, 202, 202, 0.516);
+  }
+
+  .announcements > .announcement-div > h4{
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .announcements > .announcement-div > p{
+    font-size: 12px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .trending{
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-column: 1 / 4;
+    grid-row: 5 / 6;
     background-color: chocolate;
   }
