--- a/style.css
+++ b/style.css
@@ -269,5 +269,72 @@
   .trending{
     grid-column: 1 / 4;
     grid-row: 5 / 6;
-    background-color: chocolate;
+    margin-top: 10px;
+    margin-left: 8px;
+    margin-right:15px;
+    margin-bottom: 14px;
+    border-radius: 4px;
+
+    display:grid;
+    grid-template-rows:50px 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
+  }
+
+  .trending-heading{
+    background-color:#e5e7eb;
+    padding: 10px;
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .trending > .trending-div{
+    margin-left: 8px;
+    margin-right:15px;
+    border-radius: 4px;
+  }
+
+  .trending > .trending-div > h4,h5{
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .trending > .trending-div > p{
+    font-size: 12px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .trending> .trending-div1{
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    padding: 20px 22px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+  }
+
+  .trending> .trending-div2{
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+    padding: 20px 22px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+  }
+
+  
+  .trending> .trending-div3{
+    grid-column: 1 / 4;
+    grid-row:  4 / 5;
+    padding: 20px 22px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
+  }
+
+  .trending> .trending-div4{
+    grid-column: 1 / 4;
+    grid-row:  5  / 6;
+    padding: 20px 22px;
+    background-color: #FFFFFF;
+    border-radius: 4px;
   }
