--- a/style.css
+++ b/style.css
@@ -294,6 +294,33 @@
     margin-left: 8px;
     margin-right:15px;
     border-radius: 4px;
+    
+  }
+
+  .trending > div{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-self: flex-start;
+    flex-basis:100%;
+    width:100%;
+  }
+
+  .trending > .trending-div1 > img{
+    width: 60px;
+    border-radius: 50px;
+  }
+  .trending > .trending-div2 > img{
+    width: 60px;
+    border-radius: 50px;
+  }
+  .trending > .trending-div3 > img{
+    width: 60px;
+    border-radius: 50px;
+  }
+  .trending > .trending-div4 > img{
+    width: 60px;
+    border-radius: 70px;
   }
 
   .trending > .trending-div > h4,h5{
